styling site and listing videos by category

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,3 +1,18 @@
 .footer {
-  margin-top: 3rem;
+  margin-top: 4rem;
+  text-align: center;
+}
+
+.footerText{
+  font-size: 18px;
+  color: #f2f2f2;
+}
+
+.footerAuthor{
+  color: #e4e4e4;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 08px;
+  text-decoration: none;
+
 }
