--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,8 +1,20 @@
+.topImageContainer {
+  background: url(../assets/images/headerTop.svg) 100% 100% no-repeat;
+  background-position: top;
+  background-repeat: no-repeat;
+}
+
+.bottomImageContainer{
+  background: url(../assets/images/footer.svg) 100% 100% no-repeat;
+  background-position: bottom;
+  background-repeat: no-repeat;
+}
+
 .container {
   margin: 0 auto;
   max-width: 750px;
   padding: 1rem;
-
+  
   display: flex;
   flex-direction: column;
   min-height: 100vh;
