adding youtube buttom

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -35,11 +35,12 @@
   border-radius: 4px;
   margin: 20px 0;
   padding: 10px 5px;
-
 }
-
     
-.youtubeVideo{
-  width: 50;
+.videoTitle{
+  padding: 0 10px;
 }
-  
+
+.videoDescription{
+  padding: 0 10px;
+}
