--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -36,11 +36,29 @@
   margin: 20px 0;
   padding: 10px 5px;
 }
+
+.youtubeVideo {
+  position: relative;
+  padding-bottom: 56.25%;
+  // padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+.youtubeVideo iframe,
+.videoContainer object,
+.videoContainer embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
     
 .videoTitle{
   padding: 0 10px;
 }
 
 .videoDescription{
-  padding: 0 10px;
+  padding: 20px 10px 0 10px;
 }
